# app/Http/Controllers/Api/Notification/EventController.php
@@ -9,12 +9,14 @@ use Illuminate\Support\Facades\DB;
 use App\Http\Controllers\Controller;
 
 //requests
-use App\Http\Requests\Api\Notification\SosRequest;
+use App\Http\Requests\Api\Notification\EventRequest;
 
 use App\Events\SosCreated;
+use App\Events\EventCreated;
 
 //services
 use App\Modules\Services\Notification\NotificationService;
+use App\Modules\Services\Notification\EventService;
 use App\Modules\Services\Notification\SosService;
 use App\Modules\Services\User\UserService;
 use App\Modules\Services\Booking\BookingService;
@@ -24,16 +26,18 @@ use App\Modules\Models\User;
 use App\Modules\Models\Booking;
 use App\Modules\Models\Rider;
 use App\Modules\Models\Notification;
+use App\Modules\Models\Sos;
 
 
-class SosController extends Controller
+class EventController extends Controller
 {
 
-    protected $document, $user_service, $notification_service;
+    protected $document, $user_service, $notification_service, $sos_service;
 
-    public function __construct(SosService $sos, UserService $user_service, NotificationService $notification_service)
+    public function __construct(EventService $event, SosService $sos_service, UserService $user_service, NotificationService $notification_service)
     {
-        $this->sos = $sos;
+        $this->event = $event;
+        $this->sos_service = $sos_service;
         $this->user_service = $user_service;
         $this->notification_service = $notification_service;
     }
@@ -43,7 +47,7 @@ class SosController extends Controller
 
     /**
     * @OA\Post(
-    *   path="/api/user/sos/create",
+    *   path="/api/user/sos/event/create",
     *   tags={"Notification and Sos"},
     *   summary="Create Customer's Sos",
     *   security={{"bearerAuth":{}}},
@@ -54,14 +58,8 @@ class SosController extends Controller
     *         @OA\Schema(
     *             
     *             example={
-    *                  "title":"Help!",
-    *                  "message":"The rider looks suspicius!",
-    *                  "booking_id":1,
-    *                  "location":{
-    *                       "name":"Sanepa, Lalitpur",
-    *                       "latitude":27.1234,
-    *                       "longitude":85.3434,
-    *                   },
+    *                  "message":"The rider still looks suspicius!",
+    *                  "sos_id":1,
     *                }
     *         )
     *     )
@@ -74,16 +72,10 @@ class SosController extends Controller
     *               mediaType="application/json",
     *                   @OA\Schema(      
     *                   example={
-    *                       "message": "Sos created successfully!",
-    *                       "sos": {
-    *                           "title": "Help!",
-    *                           "message": "The rider looks suspicius!",
-    *                           "booking_id": 1,
-    *                           "location": {
-    *                               "name": "Sanepa, Lalitpur",
-    *                               "latitude": 27.1234,
-    *                               "longitude": 85.3434
-    *                           },
+    *                       "message": "Event created successfully!",
+    *                       "event": {
+    *                           "message": "The rider still looks suspicius!",
+    *                           "sos_id": 1,
     *                           "created_by_id": 3,
     *                           "created_by_type": "customer",
     *                           "updated_at": "2021-12-21T05:55:18.000000Z",
@@ -115,7 +107,7 @@ class SosController extends Controller
     *      ),
     *)
     **/
-    function user_sos_store(SosRequest $request)
+    function user_event_store(EventRequest $request)
     {
      
 
@@ -127,22 +119,25 @@ class SosController extends Controller
 
 
 
-        //CREATE SOS
+        //CREATE EVENT
         return DB::transaction(function () use ($user,$request)
         {
-            $createdSos = $this->sos->create($request->all());
+            $sos = Sos::find($request->sos_id);
+            $createdEvent = $this->event->create($request->all());
     
-            if($createdSos)
+            if($createdEvent)
             {
 
-                //Send pusher/echo broadcast notification to all admins
+                //Send pusher/echo broadcast notification
                 event(
-                    new SosCreated( 
-                        $request->title, 
+                    new EventCreated( 
+                        'Sos: '.$sos->title, 
                         $request->message, 
                         $user->name, 
                         $request->created_by_type,
-                        $createdSos->id )
+                        $sos->id,
+                        $createdEvent->id 
+                        )
                     );
 
                 //Create Notification sent via pusher broadcast
@@ -152,14 +147,14 @@ class SosController extends Controller
                         'recipient_type'=>'admin',
                         'recipient_device_token'=>null,
                         'recipient_quantity_type'=>'all',
-                        'notification_type'=>'sos_create',
-                        'title'=> $request->title, 
+                        'notification_type'=>'event_create',
+                        'title'=> 'Sos: '.$sos->title, 
                         'message'=>  $request->message, 
                     ]
                 );
 
 
-                $response = ['message' => 'Sos created and sent successfully!',  "sos"=>$createdSos];
+                $response = ['message' => 'Event created and sent successfully!',  "event"=>$createdEvent];
                 return response($response, 201);
             }
             return response("Internal Server Error!", 500);
@@ -170,9 +165,9 @@ class SosController extends Controller
 
 
 
-        /**
+    /**
     * @OA\Post(
-    *   path="/api/rider/sos/create",
+    *   path="/api/rider/sos/event/create",
     *   tags={"Notification and Sos"},
     *   summary="Create Rider's Sos",
     *   security={{"bearerAuth":{}}},
@@ -183,14 +178,8 @@ class SosController extends Controller
     *         @OA\Schema(
     *             
     *             example={
-    *                  "title":"Help!",
-    *                  "message":"The customer is a wanted criminal!",
-    *                  "booking_id":1,
-    *                  "location":{
-    *                       "name":"Sanepa, Lalitpur",
-    *                       "latitude":27.1234,
-    *                       "longitude":85.3434,
-    *                   },
+    *                  "message":"The customer is still a wanted criminal!",
+    *                   "sos_id":1
     *                }
     *         )
     *     )
@@ -203,16 +192,10 @@ class SosController extends Controller
     *               mediaType="application/json",
     *                   @OA\Schema(      
     *                   example={
-    *                       "message": "Sos created successfully!",
-    *                       "sos": {
-    *                           "title": "Help!",
-    *                           "message": "The customer is a wanted criminal!",
-    *                           "booking_id": 1,
-    *                           "location": {
-    *                               "name": "Sanepa, Lalitpur",
-    *                               "latitude": 27.1234,
-    *                               "longitude": 85.3434
-    *                           },
+    *                       "message": "Event created successfully!",
+    *                       "event": {
+    *                           "message": "The customer still is a wanted criminal!",
+    *                           "sos_id": 1,
     *                           "created_by_id": 1,
     *                           "created_by_type": "rider",
     *                           "updated_at": "2021-12-21T05:55:18.000000Z",
@@ -244,7 +227,7 @@ class SosController extends Controller
     *      ),
     *)
     **/
-    function rider_sos_store(SosRequest $request)
+    function rider_event_store(EventRequest $request)
     {
      
 
@@ -264,47 +247,47 @@ class SosController extends Controller
 
 
 
-        //CREATE SOS
-        return DB::transaction(function () use ($request, $user)
-        {
-            $createdSos = $this->sos->create($request->all());
-    
-            if($createdSos)
-            {
-                     //Send pusher/echo broadcast notification to all admins
-                     event(
-                        new SosCreated( 
-                            $request->title, 
-                            $request->message, 
-                            $user->name, 
-                            $request->created_by_type,
-                            $createdSos->id )
-                        );
-    
-                    //Create Notification sent via pusher broadcast
-                    $this->notification_service->create(
-                        [
-                            'recipient_id'=>null,
-                            'recipient_type'=>'admin',
-                            'recipient_device_token'=>null,
-                            'recipient_quantity_type'=>'all',
-                            'notification_type'=>'sos_create',
-                            'title'=> $request->title, 
-                            'message'=>  $request->message, 
-                        ]
-                    );
-
-                    
-                $response = ['message' => 'Sos created successfully!',  "sos"=>$createdSos];
-                return response($response, 201);
-            }
-            return response("Internal Server Error!", 500);
-        });
-
+         //CREATE EVENT
+         return DB::transaction(function () use ($user,$request)
+         {
+             $sos = Sos::find($request->sos_id);
+             $createdEvent = $this->event->create($request->all());
+     
+             if($createdEvent)
+             {
+ 
+                 //Send pusher/echo broadcast notification
+                 event(
+                     new EventCreated( 
+                         'Sos: '.$sos->title, 
+                         $request->message, 
+                         $user->name, 
+                         $request->created_by_type,
+                         $sos->id,
+                         $createdEvent->id 
+                         )
+                     );
+ 
+                 //Create Notification sent via pusher broadcast
+                 $this->notification_service->create(
+                     [
+                         'recipient_id'=>null,
+                         'recipient_type'=>'admin',
+                         'recipient_device_token'=>null,
+                         'recipient_quantity_type'=>'all',
+                         'notification_type'=>'event_create',
+                         'title'=> 'Sos: '.$sos->title, 
+                         'message'=>  $request->message, 
+                     ]
+                 );
+ 
+ 
+                 $response = ['message' => 'Event created and sent successfully!',  "event"=>$createdEvent];
+                 return response($response, 201);
+             }
+             return response("Internal Server Error!", 500);
+         });
+ 
+        }
 
     }
-
-
-
-
-}
