# routes/api.php
@@ -15,6 +15,8 @@ use App\Http\Controllers\Api\Vehicle\VehicleController;
 use App\Http\Controllers\Api\Suggestion\SuggestionController;
 use App\Http\Controllers\Api\Notification\NotificationController;
 use App\Http\Controllers\Api\Notification\SosController;
+use App\Http\Controllers\Api\Notification\EventController;
+
 
 /*
 |--------------------------------------------------------------------------
@@ -172,7 +174,9 @@ Route::group(['as' => 'api.', 'middleware' => 'auth:api'], function ($router) {
   $router->get('/user/notifications', [NotificationController::class, 'getUserNotifications'])->name('user.notifications');
   $router->get('/rider/notifications', [NotificationController::class, 'getRiderNotifications'])->name('rider.notifications');
   $router->post('/user/sos/create', [SosController::class, 'user_sos_store'])->name('user.sos.store');
-  $router->get('/rider/sos/create', [SosController::class, 'rider_sos_store'])->name('rider.sos.store');
+  $router->post('/rider/sos/create', [SosController::class, 'rider_sos_store'])->name('rider.sos.store');
+  $router->post('/user/sos/event/create', [EventController::class, 'user_event_store'])->name('user.event.store');
+  $router->post('/rider/sos/event/create', [EventController::class, 'rider_event_store'])->name('rider.event.store');
 
 
   
