# storage/api-docs/api-docs.json
@@ -744,38 +744,6 @@
                                             "created_at": "2021-11-25T18:01:44.000000Z",
                                             "updated_at": "2021-11-25T18:16:46.000000Z",
                                             "name": "Sasuke  Uchiha",
-                                            "roles": [
-                                                {
-                                                    "id": 2,
-                                                    "slug": "rider",
-                                                    "name": "rider",
-                                                    "guard_name": "rider",
-                                                    "deleted_at": null,
-                                                    "created_at": "2021-11-25T18:01:43.000000Z",
-                                                    "updated_at": "2021-11-25T18:01:43.000000Z",
-                                                    "pivot": {
-                                                        "user_id": 2,
-                                                        "role_id": 2,
-                                                        "created_at": "2021-11-25T18:01:44.000000Z",
-                                                        "updated_at": "2021-11-25T18:01:44.000000Z"
-                                                    }
-                                                },
-                                                {
-                                                    "id": 3,
-                                                    "slug": "customer",
-                                                    "name": "customer",
-                                                    "guard_name": "customer",
-                                                    "deleted_at": null,
-                                                    "created_at": "2021-11-25T18:01:43.000000Z",
-                                                    "updated_at": "2021-11-25T18:01:43.000000Z",
-                                                    "pivot": {
-                                                        "user_id": 2,
-                                                        "role_id": 3,
-                                                        "created_at": "2021-11-25T18:01:44.000000Z",
-                                                        "updated_at": "2021-11-25T18:01:44.000000Z"
-                                                    }
-                                                }
-                                            ],
                                             "rider": {
                                                 "id": 1,
                                                 "user_id": 2,
@@ -2951,6 +2919,134 @@
                     },
                     "404": {
                         "description": "Rider could not be located at the moment!"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/user/sos/event/create": {
+            "post": {
+                "tags": [
+                    "Notification and Sos"
+                ],
+                "summary": "Create Customer's Sos",
+                "operationId": "11b5cf8633b6567c427b594a6778aea6",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "example": {
+                                    "message": "The rider still looks suspicius!",
+                                    "sos_id": 1
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "example": {
+                                        "message": "Event created successfully!",
+                                        "event": {
+                                            "message": "The rider still looks suspicius!",
+                                            "sos_id": 1,
+                                            "created_by_id": 3,
+                                            "created_by_type": "customer",
+                                            "updated_at": "2021-12-21T05:55:18.000000Z",
+                                            "created_at": "2021-12-21T05:55:18.000000Z",
+                                            "id": 1
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Fail",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden Access"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/rider/sos/event/create": {
+            "post": {
+                "tags": [
+                    "Notification and Sos"
+                ],
+                "summary": "Create Rider's Sos",
+                "operationId": "5fde5b3a985d6be421fee2b3ba359ffe",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "example": {
+                                    "message": "The customer is still a wanted criminal!",
+                                    "sos_id": 1
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "example": {
+                                        "message": "Event created successfully!",
+                                        "event": {
+                                            "message": "The customer still is a wanted criminal!",
+                                            "sos_id": 1,
+                                            "created_by_id": 1,
+                                            "created_by_type": "rider",
+                                            "updated_at": "2021-12-21T05:55:18.000000Z",
+                                            "created_at": "2021-12-21T05:55:18.000000Z",
+                                            "id": 1
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Fail",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden Access"
                     },
                     "500": {
                         "description": "Internal Server Error",
